# FizzleSDLRpg

./: CMakeLists.txt  main.cpp
Resources/: ResourceManager.cpp  ResourceManager.h
src/ECS/Components/: BackgroundComponent.h  ButtonComponent.h
src/ECS/Systems/: ButtonSystem.h  RenderSystem.h
src/EventManager/: EventManager.cpp  EventManager.h
src/Factories/: GameObjectFactory.cpp  GameObjectFactory.h
src/SceneManager/: SceneManager.cpp  SceneManager.h
src/Scenes/: GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h  Scene.cpp  Scene.h  SettingsScene.cpp  SettingsScene.h
src/Window/: Window.cpp  Window.h
